--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,89 @@
-.App {
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  background-color: #2a4d69;
+  color: #ffffff;
+  position: fixed;
+  width: 100%;
+  height: 90px;
+  z-index: 10;
+}
+.header-bg {
+  background-color: #213555;
+  transition: 0.5s;
+}
+.nav-menu {
+  display: flex;
+  color: #ffffff;
+}
+.nav-menu li {
+  padding: 0 1rem;
+}
+
+.nav-menu li a {
+  font-size: 1.2em;
+  font-weight: 500;
+  text-decoration: none;
+  color: #ffffff;
+}
+.hamburger {
+  display: none;
+}
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #070707;
+  color: #fff;
+  padding: 20px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.footer p {
+  margin: 0;
+}
+.whiteboard {
+  border: 1px solid #ccc;
+  margin: 20px;
+  width: 800px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.toolbar {
+  margin-bottom: 20px;
+}
+
+.toolbar button {
+  margin-right: 10px;
+}
+@media screen and (max-width: 1040px) {
+  .nav-menu {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    background: #213555;
+    position: absolute;
+    top: 0;
+    left: -100%;
+    z-index: -3;
+    transition: 0.3s;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .nav-menu.active {
+    left: 0;
   }
-  to {
-    transform: rotate(360deg);
+  .nav-menu li {
+    padding: 1rem 0;
+  }
+  .nav-menu li a {
+    font-size: 2rem;
+    text-decoration: none;
+    color: #ffffff;
+  }
+  .hamburger {
+    display: initial;
   }
 }
